2010-06-08  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/bouncers/multibouncer.py:
	Register the algorithm plugs in the static bouncer before starting them,
	otherwise if the setup of the plug takes a long time, setMedium
	can get called before that and then its remote interface will not get exposed.

2010-06-08  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/bouncers/algorithms/icalbouncer.xml:
	* flumotion/component/bouncers/algorithms/ipbouncer.xml:
	* flumotion/component/bouncers/algorithms/tokentest.xml:
	* flumotion/component/bouncers/base.py:
	* flumotion/component/bouncers/multibouncer.xml:
	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/misc/httpserver/httpserver.xml:
	Fix the socket name.

	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
        Use the function from the correct module.

2010-06-08  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/consumers/disker/disker.py:
	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	Don't use the newly added element_has_property, but the older
	element_factory_has_property to avoid bundling issues with recent managers
	vs not-so-recent workers.

2010-06-08  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	Can't use a function from the common module in a bundled module.

2010-06-08  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/base/http.py:
	Move the BOUNCER_SOCKET constant to the base module to avoid having to
	put flumotion.component.bouncers.component in the bundles for
	http-server and http-streamer.

2010-06-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* configure.ac:
	Remove pycairo check from configure. It's a runtime dependency and
	should be handled by packagers, as it was done for PIL.

2010-06-07  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/component.py: